# another-discord-bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LIBRARIES.md  example.config.toml
src/: main.cpp  main.hpp
src/config/: en_us.toml
